# osbng-py

./: .gitignore  AUTHORS.txt  LICENSE  README.md  bng_reference.py  pyproject.toml
examples/data/: metadata.json
examples/notebooks/: osbng_indexing_polygon_examples.ipynb
osbng/: bng_reference.py  errors.py  grids.py  hierarchy.py  indexing.py  resolution.py  traversal.py  utils.py
osbng/tests/data/: bng_reference_test_cases.json
tests/: test_bng_reference.py  test_hierarchy.py  test_indexing.py  test_traversal.py
tests/data/: bng_reference_test_cases.json  hierarchy_test_cases.json  indexing_test_cases.json  traversal_test_cases.json
